# django-wallet-api

./: README.md
src/: .env  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
src/wallet/: asgi.py  settings.py  urls.py  wsgi.py
src/walletapi/: admin.py  apps.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
src/walletapi/migrations/: 0001_initial.py  0002_alter_wallet_balance.py
